--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,5 +32,7 @@ spring:
 controller:
     user-get: Método responsável para exibir dos dados do usuário.
     post-get: Método responsável para exibir dos dados do post.
-    comments-get: Método responsável para exibir dos dados do comments.
+    comment-get: Método responsável para exibir dos dados do comments.
+    photo-get: Método responsável para exibir dos dados de photos.
+    todo-get: Método responsável para exibir dos dados de todos.
 
