Feito os metodos da documentação post, put, delete

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,9 +30,29 @@ spring:
 
 
 controller:
-    user-get: Método responsável para exibir dos dados do usuário.
-    post-get: Método responsável para exibir dos dados do post.
-    comment-get: Método responsável para exibir dos dados do comments.
-    photo-get: Método responsável para exibir dos dados de photos.
-    todo-get: Método responsável para exibir dos dados de todos.
+    user-get: Método responsável por exibir dos dados do usuário.
+#    user-get-id: Método responsável por exibir dos dados do usuário via ID.
+    user-post: Método responsável por criar novos usuário.
+    user-put: Método responsável por atualizar usuário.
+    user-delete: Método responsável por excluir usuário.
+
+    post-get: Método responsável por exibir dos dados do post.
+    post-post: Método responsável por criar novos post.
+    post-put: Método responsável por atualizar post.
+    post-delete: Método responsável por excluir post.
+
+    comment-get: Método responsável por exibir dos dados do comments.
+    comment-post: Método responsável por criar novos comments.
+    comment-put: Método responsável por atualizar comments.
+    comment-delete: Método responsável por excluir comments.
+
+    photo-get: Método responsável por exibir dos dados de photos.
+    photo-post: Método responsável por criar novos photos.
+    photo-put: Método responsável por atualizar photos.
+    photo-delete: Método responsável por excluir photos.
+
+    todo-get: Método responsável por exibir dos dados de todos.
+    todo-post: Método responsável por criar novos todos.
+    todo-put: Método responsável por atualizar todos.
+    todo-delete: Método responsável por excluir todos.
 
