--- a/pom.xml
+++ b/pom.xml
@@ -80,17 +80,17 @@
             </exclusions>
         </dependency>
 
-<!--                <dependency>-->
-<!--                    &lt;!&ndash; JPA Data (Repositories, Entities, Hibernate, etc..) &ndash;&gt;-->
-<!--                    <groupId>org.springframework.boot</groupId>-->
-<!--                    <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--                </dependency>-->
+        <dependency>
+            <!-- JPA Data (Repositories, Entities, Hibernate, etc..) -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
-<!--                <dependency>-->
-<!--                    &lt;!&ndash; Starter for using Spring Security &ndash;&gt;-->
-<!--                    <groupId>org.springframework.boot</groupId>-->
-<!--                    <artifactId>spring-boot-starter-security</artifactId>-->
-<!--                </dependency>-->
+        <!--                <dependency>-->
+        <!--                    &lt;!&ndash; Starter for using Spring Security &ndash;&gt;-->
+        <!--                    <groupId>org.springframework.boot</groupId>-->
+        <!--                    <artifactId>spring-boot-starter-security</artifactId>-->
+        <!--                </dependency>-->
 
         <dependency>
             <!-- Make method based security testing easier -->
