* Inserido estrutura de projeto para adicionar graphql

--- a/pom.xml
+++ b/pom.xml
@@ -108,11 +108,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!--                <dependency>-->
-        <!--                    &lt;!&ndash; Starter for using Spring Security &ndash;&gt;-->
-        <!--                    <groupId>org.springframework.boot</groupId>-->
-        <!--                    <artifactId>spring-boot-starter-security</artifactId>-->
-        <!--                </dependency>-->
+        <dependency>
+            <!-- Starter for using Spring Security -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <dependency>
             <!-- Make method based security testing easier -->
@@ -183,6 +183,19 @@
             <version>${swagger.version}</version>
         </dependency>
 
+
+        <!-- CONFIGURACAO GRAPHQL -->
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-spring-boot-starter</artifactId>
+            <version>5.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-tools</artifactId>
+            <version>5.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
