--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,4 +10,5 @@ spring:
     username: sa
     password: sa
   jpa:
-    database-platform: org.hibertante.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
