--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,13 @@
-projet:
+project:
     name: '@project.artifactId@'
     version: '@project.version@'
-    description: '@projeto.description@'
-
+    description: '@project.description@'
 info:
     build:
-        artifact: '@project.artifactId@'
-        name: '@project.name@'
+        artifact: ${project.artifactId}
+        name: "@project.build.finalName@"
         description: '@project.description@'
         version: '@project.version@'
-
----
 
 #Configuração do TOMCAT
 server:
