* Alterada estrutura do projeto para o uso do graphql

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,14 @@ spring:
     output:
         ansi:
             enabled: always
+#Logging
+logging:
+    level:
+        br:
+            edu.fasam.tcc.renato: debug
+        org:
+            springframework:
+                web: debug
 
 
 controller:
