--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,12 @@
             <version>5.0.2</version>
         </dependency>
 
+        <!-- PlayGround -->
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>playground-spring-boot-starter</artifactId>
+            <version>6.0.1</version>
+        </dependency>
 
     </dependencies>
 
