--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ project:
     description: '@project.description@'
 info:
     build:
-        artifact: ${project.artifactId}
-        name: "@project.build.finalName@"
+        artifact: "@project.artifactId@"
+        name: "@project.name@"
         description: '@project.description@'
         version: '@project.version@'
 
